--- a/src/pages/appHeader.css
+++ b/src/pages/appHeader.css
@@ -3,8 +3,8 @@
 }
 
 .headerWrapper {
+  padding: 0.7rem 1rem;
   display: flex;
-  padding: 0.8rem;
   gap: 0.5rem;
 }
 
@@ -23,6 +23,7 @@
   font-size: var(--body-font-size);
   color: var(--body-font-color);
   padding: 0.5rem;
+  margin-left: 0px;
 }
 
 .userName a {
@@ -92,49 +93,101 @@ img {
   vertical-align: middle;
 }
 
-.profileHeaderContainer {
-  margin-left: 0.8rem;
-  color: var(--body-font-color);
+.appHeaderLocal {
+  padding: 0 1rem;
 }
 
-.profileHeaderWrapper {
+.overflow-hidden {
+  overflow: hidden !important;
+}
+
+.underlineNav {
+  box-shadow: inset 0 -1px 0 var(#30363db3);
   display: flex;
+  min-height: 3rem;
+  overflow-x: auto;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: auto;
+  justify-content: space-between;
 }
 
-.profileHeaderWrapper a {
-  margin: auto 0.3rem;
-}
-
-.tabContainer {
-  padding-top: 0.7rem;
-  padding-bottom: 0.7rem;
-  cursor: pointer;
-}
-
-.tabContainer :hover,
-.userNameContainer :hover {
-  background: #b1bac41f;
-  border-radius: 5px;
-  transition: background 0.12s ease-out;
-}
-
-.tabWrapper {
-  display: flex;
+.underLineNavBody {
   align-items: center;
-  padding: 4px 8px;
-}
-
-.active {
-  border-bottom: 2px solid red;
-}
-
-.headerLabel {
+  display: flex;
+  gap: 0.5rem;
+  list-style: none;
   margin: 0px;
   padding: 0px;
 }
 
-.iconContainer {
+.list-style-none {
+  list-style: none !important;
+}
+
+.inlineFlex {
+  display: inline-flex !important;
+}
+
+.selected {
+  border-bottom-color: #f78166 !important;
+  color: #e6edf3;
+  font-weight: 600;
+}
+
+.selected::after {
+  background: #f78166;
+  border-radius: 0.375rem;
+  bottom: calc(50% - 25px);
+  content: '';
+  height: 2px;
+  position: absolute;
+  right: 50%;
+  transform: translate(50%, -50%);
+  width: 100%;
+  z-index: 1;
+}
+
+.underlineNavItem {
+  align-items: center;
+  background-color: initial;
+  border: 0;
+  border-radius: 0.375rem;
+  color: #e6edf3;
+  cursor: pointer;
+  display: flex;
+  font-size: 0.875rem;
+  line-height: 30px;
+  padding: 0 0.5rem;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  margin-left: 0px;
+}
+
+.no-wrap {
+  white-space: nowrap !important;
+}
+
+.overviewIcon {
+  display: inline !important;
   margin-right: 0.5rem;
-  margin-top: 4px;
-  color: var(--body-icon-color);
+  fill: #8d96a0;
+}
+
+.underlineNavItem:before {
+  content: '';
+  height: 100%;
+  left: 50%;
+  min-height: 48px;
+  position: absolute;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  width: 100%;
+}
+
+.underlineNavItem:hover {
+  background: #b1bac41f;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  transition: background 0.12s ease-out;
 }
