--- a/src/pages/appHeader.css
+++ b/src/pages/appHeader.css
@@ -1,52 +1,73 @@
 .appHeaderContainer {
   background-color: var(--AppHeader);
+  color: #e6edf3;
 }
 
-.headerWrapper {
-  padding: 0.7rem 1rem;
+.appHeaderGlobalBar {
   display: flex;
+  padding: 1rem;
   gap: 0.5rem;
 }
 
-.headerContainer {
+.appHeaderContext {
+  min-width: 0;
+  height: var(2rem, 32px);
+  flex: 1 1 auto;
+}
+
+.appHeaderContextFull {
+  display: inline-flex;
+  width: 100%;
+  min-width: 0;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.appHeaderContextItem {
+  display: flex;
+  align-items: center;
+  min-width: 3ch;
+  line-height: 1.4285714286;
+  color: inherit;
+  text-decoration: none !important;
+  border-radius: 0.375rem;
+  padding-inline: 0.5rem;
+  font-weight: 600;
+  padding: 0 0.5rem;
+}
+
+.appHeaderContextItemLabel {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.appHeaderGlobalBarStart {
   flex: 1 1 auto;
   display: flex;
+  justify-content: flex-end;
   gap: 0.5rem;
+  max-height: calc(2rem, 32px);
 }
 
-.headerContainer a {
-  cursor: pointer;
+.appHeaderGlobalBarEnd {
+  flex: 0 1 auto;
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.5rem;
+  max-height: 2rem;
 }
 
-.userName {
-  margin: 0.3rem;
-  font-size: var(--body-font-size);
-  color: var(--body-font-color);
-  padding: 0.5rem;
-  margin-left: 0px;
+.appHeaderUser {
+  position: relative;
+  background: #6e768166;
+  border-radius: 50%;
 }
 
-.userName a {
-  cursor: pointer;
-}
-
-.appHeaderUserButton {
+.buttonInvisible {
   color: #c9d1d9;
-}
-
-.button-content {
-  align-items: center;
-  display: grid;
-  flex: 1 0 auto;
-  grid-template-areas: 'leadingVisual text trailingVisual';
-  grid-template-columns: min-content minmax(0, auto) min-content;
-  place-content: center;
-}
-
-.button-label {
-  grid-area: text;
-  line-height: 1.4285;
-  white-space: nowrap;
 }
 
 button {
@@ -65,7 +86,7 @@ button {
   height: 2rem;
   justify-content: space-between;
   min-width: max-content;
-  padding: 0 0.3rem;
+  padding: 0 0.75rem;
   position: relative;
   text-align: center;
   transition: 80ms cubic-bezier(0.65, 0, 0.35, 1);
@@ -74,18 +95,30 @@ button {
   user-select: none;
 }
 
-.appHeaderUser {
-  position: relative;
-  background: #6e768166;
-  border-radius: 50%;
+.buttonLabel {
+  grid-area: text;
+  line-height: 1.4285;
+  white-space: nowrap;
+  color: #4493f8;
+}
+
+.buttonContent {
+  align-items: center;
+  display: grid;
+  flex: 1 0 auto;
+  grid-template-areas: 'leadingVisual text trailingVisual';
+  grid-template-columns: min-content minmax(0, auto) min-content;
+  place-content: center;
 }
 
 img {
   position: relative;
-  border-style: none;
 }
 
 .avatar {
+  background-color: #ffffff1a;
+  border-radius: 0.375rem;
+  box-shadow: 0 0 0 1px #ffffff26;
   display: inline-block;
   flex-shrink: 0;
   line-height: 1;
@@ -93,12 +126,12 @@ img {
   vertical-align: middle;
 }
 
-.appHeaderLocal {
-  padding: 0 1rem;
-}
-
 .overflow-hidden {
   overflow: hidden !important;
+}
+
+.appHeaderLocal {
+  padding: 0 1rem;
 }
 
 .underlineNav {
@@ -185,6 +218,7 @@ img {
   width: 100%;
 }
 
+.appHeaderContextItem:hover,
 .underlineNavItem:hover {
   background: #b1bac41f;
   -webkit-text-decoration: none;
