contact changes completed.

--- a/src/template/template.css
+++ b/src/template/template.css
@@ -25,6 +25,41 @@
   margin-left: 2.5rem;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Dark overlay */
+  color: white; /* Text color */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999; /* Ensure it appears above all other content */
+}
+
+.overlay-text {
+  position: fixed;
+  left: 20px;
+  bottom: 20px;
+  font-size: 14px; /* Font size for loading text */
+  font-weight: bold; /* Make the text bold */
+  white-space: nowrap; /* Prevent text from wrapping */
+  overflow: hidden; /* Hide overflow text */
+  animation: fadeIn 0.5s; /* Optional: Add a fade-in animation */
+}
+
+/* Optional fade-in animation */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .app-wrapper {
     display: block;
